# uncertainty-baselines

./: pyproject.toml
baselines/cifar/: partially_stochastic_variational_inference.py
baselines/cifar/partially_stochastic_models/: partially_stochastic_variational_wide_resnet.py
baselines/cifar/partially_stochatic_models/: partially_stochastic_variational_wide_resnet.py
experimental/big_paper/: colab_utils.py
scripts/: generic.sh
scripts/job_lists/: cifar100_subset_vi_moreseeds.txt  cifar10_subset_vi_moreseeds.txt  cifar_subset_vi.txt
