[tool.poetry]
name = "uncertainty-baselines"
version = "0.1.0"
description = ""
authors = ["Mrinank Sharma <mrinank.sharma.97+dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
